--- a/src/css/calendar.pcss
+++ b/src/css/calendar.pcss
@@ -45,7 +45,7 @@
   border-radius: 10px;
   width: 32px;
 }
-.calendar-body a:hover,
+html:not(.mobile) .calendar-body a:hover,
 .calendar-body a:active {
   background-color: $transparent-dark;
 }
