--- a/src/css/dialog.pcss
+++ b/src/css/dialog.pcss
@@ -45,7 +45,7 @@
   font-size: 28px;
   content: "\e070";
 }
-.dialog-close-btn:hover {
+html:not(.mobile) .dialog-close-btn:hover {
   color: rgba(0, 0, 0, .7);
 }
 .dialog-body {
