--- a/src/css/layout.pcss
+++ b/src/css/layout.pcss
@@ -47,6 +47,9 @@
 .fit > * {
   display: table-cell;
 }
+.fit > * > input {
+  width: 100%;
+}
 
 .page {
   top: 0;
