--- a/src/css/list.pcss
+++ b/src/css/list.pcss
@@ -53,7 +53,7 @@
 }
 
 a.list-group-item:active,
-a.list-group-item:hover {
+html:not(.mobile) a.list-group-item:hover {
   color: $text-black;
   background-color: $transparent-half-dark;
 }
