--- a/src/css/misc.pcss
+++ b/src/css/misc.pcss
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   -webkit-touch-callout: none;
+  user-select: none;
 }
 body {
   margin: 0;
