--- a/src/css/tree.pcss
+++ b/src/css/tree.pcss
@@ -28,7 +28,7 @@
 }
 
 .tree-node-item > .hover:hover,
-a.tree-node-item:hover,
+html:not(.mobile) a.tree-node-item:hover,
 a.tree-node-item:active {
   color: $text-black;
   background-color: $transparent-half-dark;
